Updates to perturbation figure

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -4161,7 +4161,7 @@
     "    perturb_plot_all_induction_df['condition'] = perturb_plot_all_induction_df['condition'].cat.remove_unused_categories()\n",
     "    perturb_plot_all_induction_df['norm_reporter']  = perturb_plot_all_induction_df['constant_mRNA'] / 340.0\n",
     "    perturb_plot_all_induction_df['norm_inducible'] = perturb_plot_all_induction_df['inducible_mRNA'] / 340.0\n",
-    "    perturb_plot_df = perturb_plot_all_induction_df[np.abs(perturb_plot_all_induction_df.induction - 8.0e-3) < 1e-4].copy()\n",
+    "    perturb_plot_df = perturb_plot_all_induction_df[np.abs(perturb_plot_all_induction_df.induction - 1.0/120.0) < 1e-4].copy()\n",
     "    subfig.subplots_adjust(left=0.2, bottom=0.25, right=0.9, top=0.8)\n",
     "    fig_perturb_dist_axes = subfig.subplots(nrows=2, ncols=4, sharex=False, sharey=False,\n",
     "        gridspec_kw={'wspace': 0.5, 'height_ratios':[0.2, 1.0], 'width_ratios':[5, 1, 5, 1]})\n",
@@ -4184,7 +4184,6 @@
     "            (perturb_plot_all_induction_df.energy_perturb_type == rnap_type)\n",
     "            ].copy()\n",
     "        lineplot_df['norm_induction'] = lineplot_df['induction'] / 120.0\n",
-    "        print(lineplot_df.norm_induction.unique())\n",
     "        sns.lineplot(data=lineplot_df,\n",
     "                    x='norm_induction', y='constant_mRNA', hue='condition',\n",
     "                    palette=fig_perturb_palette, legend=False, linewidth=1,\n",
@@ -4261,12 +4260,15 @@
     "    [\"energy_well\", \"none\"],\n",
     "    [\n",
     "        np.concatenate((fig_perturb_burst_size_axes[:,0].flatten(), fig_perturb_interburst_time_axes[:,0].flatten())),\n",
-    "        np.concatenate((fig_perturb_burst_size_axes[:,1].flatten(), fig_perturb_interburst_time_axes[:,1].flatten()))]):\n",
+    "        np.concatenate((fig_perturb_burst_size_axes[:,1].flatten(), fig_perturb_interburst_time_axes[:,1].flatten()))]\n",
+    "):\n",
     "    plot_burst_df = perturbation_bursting_df[\n",
     "        (\n",
-    "            (np.abs(perturbation_bursting_df.induction - 1.17/120.0) < 1e-4) |\n",
-    "            (np.abs(perturbation_bursting_df.induction - 0.01/120.0) < 1e-5)\n",
+    "            (perturbation_bursting_df.induction == 1.0/120.0) |\n",
+    "            (perturbation_bursting_df.induction == 0.0)\n",
     "        ) &\n",
+    "        (perturbation_bursting_df.torque_perturb_type == torque_type) &\n",
+    "        (perturbation_bursting_df.energy_perturb_type == rnap_type) &\n",
     "        (perturbation_bursting_df.burst_threshold == 30) &\n",
     "        (perturbation_bursting_df.inter_rnap_gene == 2) &\n",
     "        (perturbation_bursting_df.burst_size > 0) &\n",
@@ -4280,40 +4282,64 @@
     "        )\n",
     "    ].copy()\n",
     "    plot_burst_df.condition = plot_burst_df.condition.cat.remove_unused_categories()\n",
-    "    sns.kdeplot(data=plot_burst_df[(plot_burst_df.condition == 'fig.perturb.sc_bursts.tandem_reporter_upstream') & (np.abs(plot_burst_df.induction - 0.01/120.0) < 1e-5)], x='burst_size',\n",
+    "    sns.kdeplot(data=plot_burst_df[\n",
+    "            (plot_burst_df.condition == 'fig.perturb.sc_bursts.tandem_reporter_upstream') &\n",
+    "            (plot_burst_df.induction == 0.0)], x='burst_size',\n",
     "        common_norm=False, color=fig_perturb_palette['reporter_only'], linestyle=':',\n",
     "        ax=axes[1], legend=None, log_scale=True)\n",
-    "    sns.kdeplot(data=plot_burst_df[(plot_burst_df.condition == 'fig.perturb.sc_bursts.tandem_reporter_upstream') & (np.abs(plot_burst_df.induction - 0.01/120.0) < 1e-5)], x='inter_burst_time',\n",
+    "    sns.kdeplot(data=plot_burst_df[\n",
+    "            (plot_burst_df.condition == 'fig.perturb.sc_bursts.tandem_reporter_upstream') &\n",
+    "            (plot_burst_df.induction == 0.0)], x='inter_burst_time',\n",
     "        common_norm=False, color=fig_perturb_palette['reporter_only'], linestyle=':',\n",
     "        ax=axes[3], legend=None, log_scale=True)\n",
-    "    sns.kdeplot(data=plot_burst_df[(plot_burst_df.condition == 'fig.perturb.sc_bursts.tandem_reporter_upstream') & (np.abs(plot_burst_df.induction - 1.17 / 120.0) < 1e-4)], x='burst_size',\n",
+    "    sns.kdeplot(data=plot_burst_df[\n",
+    "            (plot_burst_df.condition == 'fig.perturb.sc_bursts.tandem_reporter_upstream') &\n",
+    "            (plot_burst_df.induction == 1.0/120.0)], x='burst_size',\n",
     "        common_norm=False, color=fig_perturb_palette['fig.perturb.sc_bursts.tandem_reporter_upstream'],\n",
     "        ax=axes[1], legend=None, log_scale=True)\n",
-    "    sns.kdeplot(data=plot_burst_df[(plot_burst_df.condition == 'fig.perturb.sc_bursts.tandem_reporter_upstream') & (np.abs(plot_burst_df.induction - 1.17 / 120.0) < 1e-4)], x='inter_burst_time',\n",
+    "    sns.kdeplot(data=plot_burst_df[\n",
+    "            (plot_burst_df.condition == 'fig.perturb.sc_bursts.tandem_reporter_upstream') &\n",
+    "            (plot_burst_df.induction == 1.0/120.0)], x='inter_burst_time',\n",
     "        common_norm=False, color=fig_perturb_palette['fig.perturb.sc_bursts.tandem_reporter_upstream'],\n",
     "        ax=axes[3], legend=None, log_scale=True)\n",
-    "    sns.kdeplot(data=plot_burst_df[(plot_burst_df.condition == 'fig.perturb.sc_bursts.tandem_reporter_downstream') & (np.abs(plot_burst_df.induction - 1.17 / 120.0) < 1e-4)], x='burst_size',\n",
+    "    sns.kdeplot(data=plot_burst_df[\n",
+    "            (plot_burst_df.condition == 'fig.perturb.sc_bursts.tandem_reporter_downstream')\n",
+    "            & (plot_burst_df.induction == 1.0/120.0)], x='burst_size',\n",
     "        common_norm=False, color=fig_perturb_palette['fig.perturb.sc_bursts.tandem_reporter_downstream'],\n",
     "        ax=axes[1], legend=None, log_scale=True)\n",
-    "    sns.kdeplot(data=plot_burst_df[(plot_burst_df.condition == 'fig.perturb.sc_bursts.tandem_reporter_downstream') & (np.abs(plot_burst_df.induction - 1.17 / 120.0) < 1e-4)], x='inter_burst_time',\n",
+    "    sns.kdeplot(data=plot_burst_df[\n",
+    "            (plot_burst_df.condition == 'fig.perturb.sc_bursts.tandem_reporter_downstream') &\n",
+    "            (plot_burst_df.induction == 1.0/120.0)], x='inter_burst_time',\n",
     "        common_norm=False, color=fig_perturb_palette['fig.perturb.sc_bursts.tandem_reporter_downstream'],\n",
     "        ax=axes[3], legend=None, log_scale=True)\n",
-    "    sns.kdeplot(data=plot_burst_df[(plot_burst_df.condition == 'fig.perturb.sc_bursts.convergent') & (np.abs(plot_burst_df.induction - 0.01 / 120.0) < 1e-5)], x='burst_size',\n",
+    "    sns.kdeplot(data=plot_burst_df[\n",
+    "            (plot_burst_df.condition == 'fig.perturb.sc_bursts.convergent') &\n",
+    "            (plot_burst_df.induction == 0.0)], x='burst_size',\n",
     "        common_norm=False, color=fig_perturb_palette['reporter_only'], linestyle=':',\n",
     "        ax=axes[0], legend=None, log_scale=True)\n",
-    "    sns.kdeplot(data=plot_burst_df[(plot_burst_df.condition == 'fig.perturb.sc_bursts.convergent') & (np.abs(plot_burst_df.induction - 0.01 / 120.0) < 1e-5)], x='inter_burst_time',\n",
+    "    sns.kdeplot(data=plot_burst_df[\n",
+    "            (plot_burst_df.condition == 'fig.perturb.sc_bursts.convergent') &\n",
+    "            (plot_burst_df.induction == 0.0)], x='inter_burst_time',\n",
     "        common_norm=False, color=fig_perturb_palette['reporter_only'], linestyle=':',\n",
     "        ax=axes[2], legend=None, log_scale=True)\n",
-    "    sns.kdeplot(data=plot_burst_df[(plot_burst_df.condition == 'fig.perturb.sc_bursts.convergent') & (np.abs(plot_burst_df.induction - 1.17 / 120.0) < 1e-4)], x='burst_size',\n",
+    "    sns.kdeplot(data=plot_burst_df[\n",
+    "            (plot_burst_df.condition == 'fig.perturb.sc_bursts.convergent') & \n",
+    "            (plot_burst_df.induction == 1.0/120.0)], x='burst_size',\n",
     "        common_norm=False, color=fig_perturb_palette['fig.perturb.sc_bursts.convergent'],\n",
     "        ax=axes[0], legend=None, log_scale=True)\n",
-    "    sns.kdeplot(data=plot_burst_df[(plot_burst_df.condition == 'fig.perturb.sc_bursts.convergent') & (np.abs(plot_burst_df.induction - 1.17 / 120.0) < 1e-4)], x='inter_burst_time',\n",
+    "    sns.kdeplot(data=plot_burst_df[\n",
+    "            (plot_burst_df.condition == 'fig.perturb.sc_bursts.convergent') & \n",
+    "            (plot_burst_df.induction == 1.0/120.0)], x='inter_burst_time',\n",
     "        common_norm=False, color=fig_perturb_palette['fig.perturb.sc_bursts.convergent'],\n",
     "        ax=axes[2], legend=None, log_scale=True)\n",
-    "    sns.kdeplot(data=plot_burst_df[(plot_burst_df.condition == 'fig.perturb.sc_bursts.divergent') & (np.abs(plot_burst_df.induction - 1.17 / 120.0) < 1e-4)], x='burst_size',\n",
+    "    sns.kdeplot(data=plot_burst_df[\n",
+    "            (plot_burst_df.condition == 'fig.perturb.sc_bursts.divergent') &\n",
+    "            (plot_burst_df.induction == 1.0/120.0)], x='burst_size',\n",
     "        common_norm=False, color=fig_perturb_palette['fig.perturb.sc_bursts.divergent'],\n",
     "        ax=axes[0], legend=None, log_scale=True)\n",
-    "    sns.kdeplot(data=plot_burst_df[(plot_burst_df.condition == 'fig.perturb.sc_bursts.divergent') & (np.abs(plot_burst_df.induction - 1.17 / 120.0) < 1e-4)], x='inter_burst_time',\n",
+    "    sns.kdeplot(data=plot_burst_df[\n",
+    "            (plot_burst_df.condition == 'fig.perturb.sc_bursts.divergent') &\n",
+    "            (plot_burst_df.induction == 1.0/120.0)], x='inter_burst_time',\n",
     "        common_norm=False, color=fig_perturb_palette['fig.perturb.sc_bursts.divergent'],\n",
     "        ax=axes[2], legend=None, log_scale=True)\n",
     "    for ax in axes:\n",
@@ -4331,6 +4357,13 @@
     "    axes[0].text(100,0.9,'Divergent', color=main_palette['divergent'], fontsize=font_sizes['line_annotation'])\n",
     "fig_perturb.savefig('test.svg')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
