--- a/writeups/modeling.tex
+++ b/writeups/modeling.tex
@@ -89,7 +89,7 @@ Alternatively, mechanical sources of gene regulation offer one potential mechani
 The mechanical forces of DNA supercoiling powerfully shape transcriptional variance \parencite{desaiDNArepairPathwayCan2021,chongMechanismTranscriptionalBursting2014}.
 In the process of transcription, RNA polymerases induce a leading wave of positive DNA supercoiling \parencite{wuTranscriptionGeneratesPositively1988,liuSupercoilingDNATemplate1987}, reshaping the local structure of chromatin \parencite{acharNegativeSupercoilGene2020,tevesTranscriptiongeneratedTorsionalStress2014,naughtonTranscriptionFormsRemodels2013,guoHighresolutionGenomewideMapping2021}.
 At the kilobase scale, chromatin structure correlates with gene regulation \parencite{hsiehResolving3DLandscape2020,rowleyEvolutionarilyConservedPrinciples2017, krietensteinUltrastructuralDetailsMammalian2020}.
-In yeast and human cells, transcriptionally-induced supercoiling demarks bounds of gene activity \parencite{acharNegativeSupercoilGene2020,naughtonTranscriptionFormsRemodels2013}.
+In yeast and human cells, transcriptionally-induced supercoiling demarks bounds of gene activity \parencite{acharNegativeSupercoilGene2020,naughtonTranscriptionFormsRemodels2013,kouzineTranscriptiondependentDynamicSupercoiling2013}.
 In particular, transcriptional activity dictates the strength of contact domains such as gene-to-gene interactions, indicating a role for transcription in forming and maintaining interactions at the kilobase scale \parencite{rowleyOrganizationalPrinciples3D2018,rowleyEvolutionarilyConservedPrinciples2017}.
 Together these data suggest that the process of transcription drives formation of supercoiling-linked, kilobase-scale structures that feedback into transcriptional regulation of gene expression.
 As supercoiling rapidly diffuses across long distances \parencite{loenhoutDynamicsDNASupercoils2012}, transcriptional activity at one site may impact the overall activity and dynamics of transcription of proximal genes \parencite{sevierPropertiesGeneExpression2018, sevierCollectivePolymeraseDynamics2022,tripathiDNASupercoilingmediatedCollective2021}.
@@ -98,10 +98,10 @@ Understanding how supercoiling induces coupling between neighboring genes provid
 \begin{figure}[h]
     \centering
     \includegraphics{figures/modeling_paper/graphical_abstract}
-    \caption{Supercoiling-mediated feedback drives emergent regulatory behaviors. Supercoiling-mediated feedback induces syntax-specific expression profiles and transcriptional variance. Via supercoiling-mediated feedback, circuit syntax modulated toggle switch stability, and dynamically couples transcription through coordinated bursting. } \label{fig:graphical_abstract}
+    \caption{Graphical abstract: Supercoiling-mediated feedback drives emergent regulatory behaviors. Supercoiling-mediated feedback induces syntax-specific expression profiles and transcriptional variance. Via supercoiling-mediated feedback, circuit syntax modulated toggle switch stability, and dynamically couples transcription through coordinated bursting. } \label{fig:graphical_abstract}
 \end{figure}
 
-Here we develop a model of transcriptional regulation that integrates DNA supercoiling to examine how the orientation and placement of neighboring genes affects expression. Extending from a model of supercoiling-dependent polymerase motion \parencite{sevierPropertiesGeneExpression2018}, we developed our model to include the effects of supercoiling on polymerase binding and initiation. Specifically, we model RNA polymerase binding and initiation as a function of DNA supercoiling, such that underwound DNA favors RNA polymerase binding whereas overwound DNA limits binding. To extract experimentally testable predictions, we  apply our model to simple two-gene systems that include a constitutive reporter and an inducible gene. Using these two-gene systems, we find that DNA supercoiling strongly influences the profile of gene expression and that influence is defined by syntax---the relative orientation and position of genetic elements---and the enclosing boundary conditions. In addition to regulating the output of simulated genes, supercoiling-dependent feedback tunes the size and frequency of transcriptional bursts. To investigate how these tunable parameters may impact synthetic gene circuits, we applied our model to a canonical gene circuit, a synthetic toggle switch constructed with different syntaxes.
+Here we develop a model of transcriptional regulation that integrates DNA supercoiling to examine how the orientation and placement of neighboring genes affects expression (\cref{fig:graphical_abstract}). Extending from a model of supercoiling-dependent polymerase motion \parencite{sevierPropertiesGeneExpression2018}, we developed our model to include the effects of supercoiling on polymerase binding and initiation. Specifically, we model RNA polymerase binding and initiation as a function of DNA supercoiling, such that underwound DNA favors RNA polymerase binding whereas overwound DNA limits binding. To extract experimentally testable predictions, we  apply our model to simple two-gene systems that include a constitutive reporter and an inducible gene. Using these two-gene systems, we find that DNA supercoiling strongly influences the profile of gene expression and that influence is defined by syntax---the relative orientation and position of genetic elements---and the enclosing boundary conditions. In addition to regulating the output of simulated genes, supercoiling-dependent feedback tunes the size and frequency of transcriptional bursts. To investigate how these tunable parameters may impact synthetic gene circuits, we applied our model to a canonical gene circuit, a synthetic toggle switch constructed with different syntaxes.
 We find that circuit syntax affects the stability of states and sets biochemical parameters required for bistability including repressor cooperativity and RNA stability. Finally, we explored how DNA supercoiling might support transcriptional coordination within the native genome of zebrafish (\textit{Danio rerio}) to enable somite segmentation. We find that DNA supercoiling acts as a mechanism for coordinating expression between divergently expressed genes in the segmentation network. Supercoiling-dependent feedback supports tight regulation of these proximal clock genes, providing a molecular mechanism for the precise coordination of gene expression observed during somite formation \parencite{zinaniPairingSegmentationClock2021}. Thus, supercoiling-mediated feedback represents a novel, testable regulatory mechanism that can both explain native behaviors and guide synthetic designs.
 
 
@@ -212,22 +212,22 @@ More generally, we can use stochastic formulations of other regulatory mechanism
     \ContinuedFloat
     \caption{Supercoiling-dependent feedback induces syntax-specific expression profiles.
         \subref{fig:base_orientations} Two-gene circuits serve as a testbed for investigating supercoiling-mediated feedback. All four syntaxes include a reporter gene (colored) and an inducible gene (gray).
-        \subref{fig:bc_induction_sweep} Two classes of boundary conditions are simulated. Linear boundary conditions are simulated with adjacent ``walls'' that prevent supercoiling propagation, whereas circular boundary conditions allow supercoiling generated at one gene to freely affect other genes in either direction around the circle. At right, reporter expression is plotted as a function of the level of induction of the adjacent gene for circular and linear boundary conditions. Reporter output is normalized by dividing mRNA counts by a constant value (250 mRNAs).
-        \subref{fig:circular_bc_distributions} Gene expression distributions for ensembles of circular-boundary-condition simulations are shown, where the adjacent induced gene is equally induced relative to the reporter gene. For each of the four syntaxes, the expression variance can be decomposed into intrinsic and extrinsic noise components; the ratio of intrinsic to extrinsic noise is shown on the right. Reporter output is normalized by dividing mRNA counts by a constant value (340 mRNAs).
-        \subref{fig:linear_bc_distributions} Gene expression distributions and the intrinsic to extrinsic noise ratios are shown for ensembles of simulations with linear boundary conditions. Reporter output is normalized by dividing counts by a constant value (340 mRNAs).
+        \subref{fig:bc_induction_sweep} Two classes of boundary conditions are simulated. Linear boundary conditions are simulated with adjacent ``walls'' that prevent supercoiling propagation, whereas circular boundary conditions allow supercoiling generated at one gene to freely affect other genes in either direction around the circle. At right, reporter expression is plotted as a function of the level of induction of the adjacent gene for circular and linear boundary conditions. Reporter output is normalized to the uninduced expression case by dividing mRNA counts by a constant value per boundary condition case (10 mRNAs for the circular case and 250 mRNAs for the linear case).
+        \subref{fig:circular_bc_distributions} Gene expression distributions for ensembles of circular-boundary-condition simulations are shown, where the adjacent induced gene is equally induced relative to the reporter gene. For each of the four syntaxes, the expression variance can be decomposed into intrinsic and extrinsic noise components; the ratio of intrinsic to extrinsic noise is shown on the right. Reporter output is normalized by dividing mRNA counts by a constant value (10 mRNAs).
+        \subref{fig:linear_bc_distributions} Gene expression distributions and the intrinsic to extrinsic noise ratios are shown for ensembles of simulations with linear boundary conditions. Reporter output is normalized by dividing counts by a constant value (250 mRNAs).
         \subref{fig:base_model_sc_density} The supercoiling density across the linear constructs are shown as a function of induction of the inducible gene. Induction (colored line) displays syntax-specific behavior compared to the uninduced case (dashed line).
-        \subref{fig:reporter_output_by_spacing_fold_induction} Deviations in reporter output relative to the maximum intergene-spacing plotted as a function of intergene-spacing (\(\Delta x\)) for varying levels of induction.
+        \subref{fig:reporter_output_by_spacing_fold_induction} Deviations in reporter output relative to the mean reporter output at maximum intergene-spacing (10kb) plotted as a function of intergene-spacing (\(\Delta x\)) for varying levels of induction.
     } \label{fig:top:orientation_bc_behavior}
 \end{figure}
 
 In order to characterize the behavior of supercoiling-mediated feedback, we simulated a series of two-gene systems. These experimentally accessible two-gene systems allow us to test and understand the core design considerations---syntax, relevant boundary conditions, and other experimentally-tunable parameters---within a well-defined and controlled system. Our two-gene systems consist of a reporter gene that is constitutively active and an adjacent, inducible gene placed in either a tandem orientation with the reporter upstream, tandem orientation with the reporter downstream, convergent orientation, or divergent orientation (\cref{fig:base_orientations}).
 
-Varying syntax, we examined how boundary conditions affect the expression profiles of the reporter and inducible genes. The type of boundary condition determines how transcriptionally-generated supercoiling propagates to adjacent genes. Experimentally, plasmid DNA and genomically-integrated cassettes allow for interrogation of circular and linear boundary conditions, respectively.  Plotting reporter expression as a function of adjacent gene induction, we observed that circular boundary conditions show a monotonic increase in reporter output that scales by syntax (\cref{fig:bc_induction_sweep}). With circular boundary conditions, the convergent and divergent syntaxes have similar topological layouts, differing only in the relative lengths of the intergenic and inter-promoter regions; as such, the two behave similarly. In contrast, linear boundary conditions show diverse behaviors. The upstream tandem and divergent syntaxes maintain high expression levels while the convergent and downstream tandem syntaxes show decreasing reporter expression with increasing induction of the neighboring gene.
+Varying syntax, we examined how boundary conditions affect the expression profiles of the reporter and inducible genes. The type of boundary condition determines how transcriptionally-generated supercoiling propagates to adjacent genes. Experimentally, plasmid DNA and genomically-integrated cassettes allow for interrogation of circular and linear boundary conditions, respectively.  Plotting reporter expression as a function of adjacent gene induction (normalizing reporter output per boundary-condition type relative to the uninduced case), we observed that circular boundary conditions show a monotonic increase in reporter output that scales by syntax (\cref{fig:bc_induction_sweep}). With circular boundary conditions, both the convergent and divergent syntaxes show a large enhancement of expression relative to the uninduced case, whereas the tandem cases showed only a slight enhancement. This phenomena occurs because, on a circle, the convergent and divergent syntaxes differ only in the relative lengths of the intergenic and inter-promoter regions; as such, negative supercoiling density will accumulate in the inter-promoter region, enhancing expression in the convergent and divergent syntaxes. In contrast, linear boundary conditions show diverse behaviors. The upstream tandem and divergent syntaxes maintain high expression levels while the convergent and downstream tandem syntaxes show decreasing reporter expression with increasing induction of the neighboring gene.
 
 Transcriptional noise substantially contributes to variance of gene expression \parencite{quartonUncouplingGeneExpression2020}, often confounding circuit designs. Thus, designing circuits to respond to or suppress noise may improve circuit performance. To investigate how syntax impacts expression profiles and noise, we simulated the ensemble behavior for circular and linear two-gene systems at equal transcriptional induction (gray dotted line in \cref{fig:bc_induction_sweep}). To examine different forms of noise, we decompose the population variance into an \emph{extrinsic} noise component that describes how ``all'' genes co-vary within a cell and an \emph{intrinsic} noise component that describes the inter-gene variance within a cell. Then, we define the noise ratio as the intrinsic noise divided by the extrinsic noise. For the circular boundary condition simulations, we found that all four ensembles are dominated by extrinsic noise (\cref{fig:circular_bc_distributions}). In contrast, while the tandem syntaxes with linear boundary conditions show approximately equal intrinsic and extrinsic noise, the linear convergent and divergent populations showed diverging shifts in the variance distribution (\cref{fig:linear_bc_distributions}). Despite similar levels of extrinsic noise, the divergent syntax minimizes intrinsic variation between the two genes while the convergent syntax maximizes intergene variation. 
 Moving forward, we used the linear set of boundary conditions to analyze system behaviors as we observe the richest set of behaviors under these boundary conditions.
 
-To understand the mechanisms that support syntax-specific expression profiles (\cref{fig:linear_bc_distributions}), we examined the ensemble supercoiling density of our two-gene systems. Putatively, differences in supercoiling across the two-gene systems give rise to differences in RNAP initiation and thus impact gene expression. To observe supercoiling across the two-gene systems, we averaged the supercoiling density across the simulated ensemble. To examine how induction of the adjacent gene changes supercoiling density, we compared the profiles for when the adjacent gene is uninduced (zero-fold induction) and induced (one-fold induction). As expected, the uninduced cases uniformly show that positive supercoiling accumulates upstream of the constitutively-active reporter gene while negative supercoiling accumulates downstream (\cref{fig:base_model_sc_density}, for other induction levels, see \cref{fig:supp:sc_density_induction}). Upon induction of the adjacent gene, supercoiling accumulates within the intergenic regions in a syntax-specific manner.
+To understand the mechanisms that support syntax-specific expression profiles (\cref{fig:linear_bc_distributions}), we examined the ensemble supercoiling density of our two-gene systems. Putatively, differences in supercoiling across the two-gene systems give rise to differences in RNAP initiation and thus impact gene expression. To observe supercoiling across the two-gene systems, we averaged the supercoiling density across the simulated ensemble. To examine how induction of the adjacent gene changes supercoiling density, we compared the profiles for when the adjacent gene is uninduced (zero-fold induction) and induced (one-fold induction). As expected, the uninduced cases uniformly show that positive supercoiling accumulates downstream of the constitutively-active reporter gene while negative supercoiling accumulates upstream (\cref{fig:base_model_sc_density}, for other induction levels, see \cref{fig:supp:sc_density_induction}). The small increase in expression in the uninduced linear downstream tandem and divergent cases observed in \cref{fig:bc_induction_sweep} is observed as an increase in the supercoiling density. While each uninduced case generates an equal magnitude of positive and negative supercoiling upstream and downstream, the distance from the reporter gene to the boundaries differs depending on syntax, leading to the shorter segment having the higher magnitude of supercoiling \emph{density}. Upon induction of the adjacent gene, supercoiling accumulates within the intergenic regions in a syntax-specific manner.
 
 Supercoiling \emph{density} determines both supercoiling-dependent initiation and polymerase stalling. Changing the intergene spacing directly tunes the transcriptional activity required to reach a specified supercoiling density and thus reach different expression profiles. To understand the spacing-driven deviations in reporter behavior, we simulated our linear two-gene circuits with different intergene spacings from 500 bp to 10 kb and plotted the output of each circuit, relative to the 10 kb case. Changes in inter-gene spacing mildly influence expression in the tandem and convergent syntaxes (\cref{fig:reporter_output_by_spacing_fold_induction}). However, across most induction levels of the adjacent gene, the divergent syntax shows a strong \emph{reduction} in reporter output at small intergenic spacings, potentially demonstrating a tradeoff between the accumulated negative supercoils' ability to enhance polymerase loading and the ability to stall polymerases due to extreme supercoiling values.
 
@@ -277,7 +277,7 @@ To expand our understanding of the emergent supercoiling-dependent dynamics, we 
 
 The four syntaxes show starkly different cross-correlation behavior (\cref{fig:orientation_cross_correlation}).  The convergent system shows a very large anti-correlation at zero time offset with positive correlation peaks at offsets around \(\pm 2\) hours. This combination suggests a periodic but out-of-phase behavior between the two genes with a period of around two hours, confirming that our ensemble behaves similarly to the example simulation in \cref{fig:sc_examples}. In contrast, the divergent syntax shows a strong positive peak at zero time offset, showing strong, aperiodic but correlated behavior. Tandem syntax showed weak correlation between genes. 
 
-We then examined how adjacent induction affects the reporter output distributions. We find that the behavior exemplified in \cref{fig:sc_examples} generalizes to the entire ensemble (\cref{fig:output_distribution_by_orientation_dynamics}). The downstream tandem and convergent cases show a reduction in reporter output, the upstream tandem case shows a small increase in reporter output, and the divergent reporter output stays relatively constant. At high adjacent induction, we observe that the upstream tandem and divergent cases show enhanced transcription, with the downstream tandem and divergent cases effectively turning off (\cref{fig:supp:sc_distributions_high_alpha_induction}).  We also noted that the width of the distributions change before and after induction, suggesting a change in the noise profile.
+We then examined how adjacent induction affects the reporter output distributions. We find that the behavior exemplified in \cref{fig:sc_examples} generalizes to the entire ensemble (\cref{fig:output_distribution_by_orientation_dynamics}). The downstream tandem and convergent cases show a reduction in reporter output, the upstream tandem case shows a small increase in reporter output, and the divergent reporter output stays relatively constant. At high adjacent induction, we observe that the upstream tandem and divergent cases show enhanced transcription, with the downstream tandem and convergent cases effectively turning off (\cref{fig:supp:sc_distributions_high_alpha_induction}).  We also noted that the width of the distributions change before and after induction, suggesting a change in the noise profile.
 
 As noise impacts the properties of native and synthetic gene networks, we quantified the width of the these distributions by plotting the standard deviation of the ensemble reporter output as a function of time (\cref{fig:noise_by_orientation}). Prior to induction of the second gene, all four systems display similar standard deviations. Syntax differences emerge upon induction of the second gene. We found that syntax strongly modulates the noise behavior of the reporter. In particular, the downstream reporter in the tandem syntax and the reporter in the convergent syntax show a strong \emph{increase} in noise levels while the upstream reporter in the tandem syntax and the reporter in the divergent syntax show a small \emph{decrease} in noise levels. These changes in noise can be understood in light of the change in burst dynamics presented in \cref{fig:burst_size_dynamics,fig:interburst_time_dynamics}.
 The reduction of noise and mean expression value in the downstream-tandem and convergent cases occurs concomitant with a \emph{decrease} in the burst size (\cref{fig:burst_size_dynamics}). This is expected; if each burst is on average smaller, fluctuations in burst size will have a more dramatic effect on each individual simulation. The decrease of noise in the downstream-tandem and divergent syntaxes is matched by a decrease in the inter-burst time (\cref{fig:interburst_time_dynamics}). Because bursts happen more frequently, the ensemble reporter output is more stable as we approach the always-on limit.
@@ -295,7 +295,6 @@ Taken as a whole, syntax provides a powerful design parameter for inducing and t
     \phantomsubcaption\label{fig:toggle_stable_frac_n_2.0}
     \phantomsubcaption\label{fig:toggle_burst_size}
     \phantomsubcaption\label{fig:toggle_half_life_vs_mRNA_deg}
-    \phantomsubcaption\label{fig:toggle_vs_topo_rate}
     }
 \end{figure}
 \begin{figure}[htbp]
@@ -306,7 +305,6 @@ Taken as a whole, syntax provides a powerful design parameter for inducing and t
     \subref{fig:toggle_stable_frac_n_2.0} The stability, measured as the percentage of simulations in the ensemble that have never escaped the initial starting basin, of the four starting states of the system plotted as a function of time. 
     \subref{fig:toggle_burst_size} Expression burst size distributions of the initially-active gene A are plotted as a function of circuit syntax. 
     \subref{fig:toggle_half_life_vs_mRNA_deg} The half life at different values of the mRNA degradation rate are shown. As the mRNA degradation rate principally sets the average number of mRNA molecules, high degradation rates lead to systems with low overall mRNA concentration and concordant stochastic instability.
-    \subref{fig:toggle_vs_topo_rate} The stability of the four starting states of the toggle systems are plotted as a function of topoisomerase relaxation rate. 
 } \label{fig:top:toggle_switch}
 \end{figure}
 
@@ -325,15 +323,15 @@ The convergent syntax approaches an equilibrium where approximately half of the 
 To quantify these distribution results, we computed the \emph{stable fraction} of the ensemble, defined as the fraction of simulations that have never left the initial starting basin at a certain simulation time.
 The stable fraction monotonically decreases toward zero with time, as simulations that cross into the other stable basin are no longer counted as stable even if they return to the original basin.
 We observe substantial syntax differences in the dynamics of the stable fraction of the ensemble (\cref{fig:toggle_stable_frac_n_2.0}). While the tandem orientations represent the extremes of stability, the convergent and divergent syntaxes exhibit intermediate stabilities.
-As expected, different burst dynamics characterize toggle switch behaviors, varying by syntax. In particular, we observe that the divergent syntax displays \emph{reduced} burst size when compared to the other syntaxes (\cref{fig:toggle_burst_size}). We hypothesize that the divergent toggle switch may be governed by a conflicting interaction at the promoter level between supercoiling-mediated feedback and mutual inhibition.
-Overall, these trends suggest that toggle switch behavior emerges through correlated (or anti-correlated) transcription rather than through differences in burst size and inter-burst time, pointing to potentially orthogonal modes of tuning expression of genes within toggle switches.
+As expected, different burst dynamics characterize toggle switch behaviors, varying by syntax. In particular, we observe that the divergent syntax displays \emph{reduced} burst size when compared to the other syntaxes (\cref{fig:toggle_burst_size}). In contrast, the inter-burst time distributions do not significantly vary with syntax (\cref{fig:supp_toggles_interburst_time}), suggesting that burst size, not burst frequency, is a key parameter tuned by supercoiling-mediated feedback. We hypothesize that the divergent toggle switch may be governed by a conflicting interaction at the promoter level between supercoiling-mediated feedback and mutual inhibition.
+Overall, these trends suggest that the observed toggle switch behavior emerges through correlated (or anti-correlated) transcription and changes in burst size, suggesting that toggle switch behavior could be tuned orthogonally by supercoiling-mediated feedback and by methods that change burst frequency.
 
 For any stochastic system, the steady-state number of molecules influences the stability of the system. As the reservoir of molecules grows larger, the size of fluctuations relative to the total concentration decreases. For toggle switches, we expect that as the number of steady-state mRNA molecules grows, we should approach the theoretical, continuous solution that predicts that no state-switching occurs. To examine this expectation, we modified the simulated mRNA degradation rate, scaling \(K\) as described in \cref{sec:supp:choice_of_k}, and plotted the resulting half-lives (\cref{fig:toggle_half_life_vs_mRNA_deg}).
 As the mRNA degradation rate goes to zero, we increase the reservoir size and observe that the half life for all syntaxes approaches the simulation upper-limit on the half life (\cref{fig:toggle_half_life_vs_mRNA_deg}).  Interestingly, increasing mRNA degradation rates reduces the asymmetry in the half-lives between the tandem upstream and tandem downstream syntaxes. These results suggest that state switching increases as mRNA degradation rate increases as expected.
 
-Finally, topoisomerases regulate DNA topology including DNA supercoiling in the genome, reducing genomic stress.
-By relaxing accumulated supercoiling across the genome, activity of topoisomerases decreases the average amount of supercoiling. Thus, simulated topoisomerase activity may temporarily relax constraints generated through transcriptionally-induced DNA supercoiling.
-We examined how the rate of topoisomerase relaxation events affected the stability of the simulated toggle switches. Divergent toggle switches appear insensitive to a large range of topoisomerase rates (\cref{fig:toggle_vs_topo_rate}). We observe that the most stable systems---the upstream tandem and convergent syntaxes---exhibit topoisomerase-sensitive behavior, showing a minor increase in stability at high topoisomerase rates. Thus, while topoisomerases play an important role across the genome, supercoiling-dependent regulatory behavior may be relatively insensitive to topoisomerase activity.
+%Finally, topoisomerases regulate DNA topology including DNA supercoiling in the genome, reducing genomic stress.
+%By relaxing accumulated supercoiling across the genome, activity of topoisomerases decreases the average amount of supercoiling. Thus, simulated topoisomerase activity may temporarily relax constraints generated through transcriptionally-induced DNA supercoiling.
+%We examined how the rate of topoisomerase relaxation events affected the stability of the simulated toggle switches. Divergent toggle switches appear insensitive to a large range of topoisomerase rates (\cref{fig:toggle_vs_topo_rate}). We observe that the most stable systems---the upstream tandem and convergent syntaxes---exhibit topoisomerase-sensitive behavior, showing a minor increase in stability at high topoisomerase rates. Thus, while topoisomerases play an important role across the genome, supercoiling-dependent regulatory behavior may be relatively insensitive to topoisomerase activity.
 
 % LAYOUT TWEAKS - allow figures to float around within results
 %\FloatBarrier
