Updated Zinani and perturbation figures

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -3788,7 +3788,7 @@
     "# Create the overall figure, gridspec, and add subfigure labels.\n",
     "fig_perturb = plt.figure(figsize=(6.5,9.0))\n",
     "fig_perturb_gridspec = gridspec.GridSpec(5, 2, figure=fig_perturb,\n",
-    "    wspace=0.1, hspace=0.15, height_ratios=[0.7, 1.0, 1.0, 0.5, 0.5])\n",
+    "    wspace=0.1, hspace=0.15, height_ratios=[0.7, 0.4, 1.0, 0.5, 0.5])\n",
     "fig_perturb_subfigures = {\n",
     "    'A': fig_perturb.add_subfigure(fig_perturb_gridspec[0,:]),\n",
     "    'B': fig_perturb.add_subfigure(fig_perturb_gridspec[1,:]),\n",
@@ -3882,138 +3882,137 @@
    "source": [
     "# Plot distribution data\n",
     "fig_perturb_noise_axes = []\n",
-    "for is_plasmid, subfig, noise_offset, noise_scale in zip(\n",
-    "        [0,1],\n",
-    "        [fig_perturb_subfigures[x] for x in 'BC'],\n",
-    "        [[-0.04,0], [18,0]],\n",
-    "        [1.0, 26.0]\n",
-    "):\n",
-    "    perturb_plot_all_induction_df = perturbation_df[\n",
-    "        (\n",
-    "            perturbation_df['is_plasmid'] == is_plasmid\n",
-    "        ) & (\n",
-    "            (perturbation_df['condition'] == 'fig.perturb.tandem_reporter_upstream') |\n",
-    "            (perturbation_df['condition'] == 'fig.perturb.tandem_reporter_downstream') |\n",
-    "            (perturbation_df['condition'] == 'fig.perturb.convergent') |\n",
-    "            (perturbation_df['condition'] == 'fig.perturb.divergent')\n",
-    "        ) & (\n",
-    "            (perturbation_df['rates.sc_dependent'] == 1.0) &\n",
-    "            (np.abs(perturbation_df['coeff.sigma_squared'] - 0.025) < 0.001)\n",
-    "        )\n",
-    "    ].copy()\n",
-    "    perturb_plot_all_induction_df['condition'] = perturb_plot_all_induction_df['condition'].cat.remove_unused_categories()\n",
-    "    perturb_plot_all_induction_df['norm_reporter']  = perturb_plot_all_induction_df['constant_mRNA']\n",
-    "    perturb_plot_all_induction_df['norm_inducible'] = perturb_plot_all_induction_df['inducible_mRNA']\n",
-    "    perturb_plot_all_induction_df.loc[\n",
-    "        (perturb_plot_all_induction_df.is_plasmid==0.0) &\n",
-    "        (perturb_plot_all_induction_df.torque_perturb_type=='positive_buffer'), 'norm_reporter'] /= 340.0\n",
-    "    perturb_plot_all_induction_df.loc[\n",
-    "        (perturb_plot_all_induction_df.is_plasmid==0.0) &\n",
-    "        (perturb_plot_all_induction_df.torque_perturb_type=='positive_buffer'), 'norm_inducible'] /= 340.0\n",
-    "    perturb_plot_all_induction_df.loc[\n",
-    "        (perturb_plot_all_induction_df.is_plasmid==1.0) &\n",
-    "        (perturb_plot_all_induction_df.torque_perturb_type=='positive_buffer'), 'norm_reporter'] /= 10.0\n",
-    "    perturb_plot_all_induction_df.loc[\n",
-    "        (perturb_plot_all_induction_df.is_plasmid==1.0) &\n",
-    "        (perturb_plot_all_induction_df.torque_perturb_type=='positive_buffer'), 'norm_inducible'] /= 10.0\n",
-    "    perturb_plot_all_induction_df.loc[\n",
-    "        (perturb_plot_all_induction_df.is_plasmid==0.0) &\n",
-    "        (perturb_plot_all_induction_df.energy_perturb_type=='energy_well'), 'norm_reporter'] /= 75.0\n",
-    "    perturb_plot_all_induction_df.loc[\n",
-    "        (perturb_plot_all_induction_df.is_plasmid==0.0) &\n",
-    "        (perturb_plot_all_induction_df.energy_perturb_type=='energy_well'), 'norm_inducible'] /= 75.0\n",
-    "    perturb_plot_all_induction_df.loc[\n",
-    "        (perturb_plot_all_induction_df.is_plasmid==1.0) &\n",
-    "        (perturb_plot_all_induction_df.energy_perturb_type=='energy_well'), 'norm_reporter'] /= 10.0\n",
-    "    perturb_plot_all_induction_df.loc[\n",
-    "        (perturb_plot_all_induction_df.is_plasmid==1.0) &\n",
-    "        (perturb_plot_all_induction_df.energy_perturb_type=='energy_well'), 'norm_inducible'] /= 10.0\n",
-    "    perturb_plot_df = perturb_plot_all_induction_df[np.abs(perturb_plot_all_induction_df.induction - 1.0/120.0) < 1e-4].copy()\n",
-    "    subfig.subplots_adjust(left=0.12, bottom=0.2, right=0.95, top=0.9)\n",
-    "    fig_perturb_dist_axes = subfig.subplots(nrows=2, ncols=4, sharex=False, sharey=False,\n",
-    "        gridspec_kw={'hspace': 1.0, 'wspace': 0.5, 'height_ratios':[0.2, 1.0], 'width_ratios':[5, 1, 5, 1]})\n",
-    "    fig_perturb_dist_axes[0,1].set_visible(False)\n",
-    "    fig_perturb_dist_axes[0,3].set_visible(False)\n",
-    "    for c_label, torque_type, rnap_type, axes in zip(\n",
-    "        [\"Extreme σ penalty\", \"Nucleosome buffering\"],\n",
-    "        [\"none\", \"positive_buffer\"],\n",
-    "        [\"energy_well\", \"none\"],\n",
-    "        [\n",
-    "            np.concatenate(([fig_perturb_dist_axes[0,0]], fig_perturb_dist_axes[1,:2].flatten())),\n",
-    "            np.concatenate(([fig_perturb_dist_axes[0,2]], fig_perturb_dist_axes[1,2:].flatten()))\n",
-    "        ]):\n",
+    "perturb_plot_all_induction_df = perturbation_df[\n",
+    "    (\n",
+    "        (perturbation_df['condition'] == 'fig.perturb.tandem_reporter_upstream') |\n",
+    "        (perturbation_df['condition'] == 'fig.perturb.tandem_reporter_downstream') |\n",
+    "        (perturbation_df['condition'] == 'fig.perturb.convergent') |\n",
+    "        (perturbation_df['condition'] == 'fig.perturb.divergent')\n",
+    "    ) & (\n",
+    "        (perturbation_df['rates.sc_dependent'] == 1.0) &\n",
+    "        (np.abs(perturbation_df['coeff.sigma_squared'] - 0.025) < 0.001)\n",
+    "    )\n",
+    "].copy()\n",
+    "perturb_plot_all_induction_df['condition'] = perturb_plot_all_induction_df['condition'].cat.remove_unused_categories()\n",
+    "perturb_plot_all_induction_df['norm_reporter']  = perturb_plot_all_induction_df['constant_mRNA']\n",
+    "perturb_plot_all_induction_df['norm_inducible'] = perturb_plot_all_induction_df['inducible_mRNA']\n",
+    "perturb_plot_all_induction_df.loc[\n",
+    "    (perturb_plot_all_induction_df.is_plasmid==0.0) &\n",
+    "    (perturb_plot_all_induction_df.torque_perturb_type=='positive_buffer'), 'norm_reporter'] /= 340.0\n",
+    "perturb_plot_all_induction_df.loc[\n",
+    "    (perturb_plot_all_induction_df.is_plasmid==0.0) &\n",
+    "    (perturb_plot_all_induction_df.torque_perturb_type=='positive_buffer'), 'norm_inducible'] /= 340.0\n",
+    "perturb_plot_all_induction_df.loc[\n",
+    "    (perturb_plot_all_induction_df.is_plasmid==1.0) &\n",
+    "    (perturb_plot_all_induction_df.torque_perturb_type=='positive_buffer'), 'norm_reporter'] /= 10.0\n",
+    "perturb_plot_all_induction_df.loc[\n",
+    "    (perturb_plot_all_induction_df.is_plasmid==1.0) &\n",
+    "    (perturb_plot_all_induction_df.torque_perturb_type=='positive_buffer'), 'norm_inducible'] /= 10.0\n",
+    "perturb_plot_all_induction_df.loc[\n",
+    "    (perturb_plot_all_induction_df.is_plasmid==0.0) &\n",
+    "    (perturb_plot_all_induction_df.energy_perturb_type=='energy_well'), 'norm_reporter'] /= 75.0\n",
+    "perturb_plot_all_induction_df.loc[\n",
+    "    (perturb_plot_all_induction_df.is_plasmid==0.0) &\n",
+    "    (perturb_plot_all_induction_df.energy_perturb_type=='energy_well'), 'norm_inducible'] /= 75.0\n",
+    "perturb_plot_all_induction_df.loc[\n",
+    "    (perturb_plot_all_induction_df.is_plasmid==1.0) &\n",
+    "    (perturb_plot_all_induction_df.energy_perturb_type=='energy_well'), 'norm_reporter'] /= 10.0\n",
+    "perturb_plot_all_induction_df.loc[\n",
+    "    (perturb_plot_all_induction_df.is_plasmid==1.0) &\n",
+    "    (perturb_plot_all_induction_df.energy_perturb_type=='energy_well'), 'norm_inducible'] /= 10.0\n",
+    "perturb_plot_df = perturb_plot_all_induction_df[np.abs(perturb_plot_all_induction_df.induction - 1.0/120.0) < 1e-4].copy()\n",
+    "fig_perturb_subfigures['B'].subplots_adjust(left=0.12, bottom=0.2, right=0.95, top=0.9)\n",
+    "fig_perturb_output_axes = fig_perturb_subfigures['B'].subplots(nrows=2, ncols=2, sharex=True, sharey=False,\n",
+    "    gridspec_kw={'hspace': 1.0, 'wspace': 0.5})\n",
+    "fig_perturb_subfigures['C'].subplots_adjust(left=0.12, bottom=0.2, right=0.95, top=0.9)\n",
+    "fig_perturb_dist_axes = fig_perturb_subfigures['C'].subplots(nrows=2, ncols=4, sharex=False, sharey=False,\n",
+    "    gridspec_kw={'hspace': 1.0, 'wspace': 0.5, 'width_ratios':[5, 1, 5, 1]})\n",
+    "for c_label, torque_type, rnap_type, axes in zip(\n",
+    "    [\"Extreme σ penalty\", \"Nucleosome buffering\"],\n",
+    "    [\"none\", \"positive_buffer\"],\n",
+    "    [\"energy_well\", \"none\"],\n",
+    "    [\n",
+    "        np.concatenate((fig_perturb_output_axes[:,0].flatten(), fig_perturb_dist_axes[:,:2].flatten(order='F'))),\n",
+    "        np.concatenate((fig_perturb_output_axes[:,1].flatten(), fig_perturb_dist_axes[:,2:].flatten(order='F')))\n",
+    "    ]):\n",
     "\n",
-    "        perturb_type_df = perturb_plot_df[\n",
-    "            (perturb_plot_df.torque_perturb_type == torque_type) &\n",
-    "            (perturb_plot_df.energy_perturb_type == rnap_type)\n",
-    "        ]\n",
+    "    perturb_type_df = perturb_plot_df[\n",
+    "        (perturb_plot_df.torque_perturb_type == torque_type) &\n",
+    "        (perturb_plot_df.energy_perturb_type == rnap_type)\n",
+    "    ]\n",
     "\n",
+    "    for is_plasmid, subaxes in zip([True, False], [axes[::2], axes[1::2]]):\n",
     "        lineplot_df = perturb_plot_all_induction_df[\n",
     "            (perturb_plot_all_induction_df.torque_perturb_type == torque_type) &\n",
-    "            (perturb_plot_all_induction_df.energy_perturb_type == rnap_type)\n",
+    "            (perturb_plot_all_induction_df.energy_perturb_type == rnap_type) &\n",
+    "            (perturb_plot_all_induction_df.is_plasmid == is_plasmid)\n",
     "            ].copy()\n",
     "        lineplot_df['norm_induction'] = lineplot_df['induction'] * 120.0\n",
     "        sns.lineplot(data=lineplot_df,\n",
-    "                    x='norm_induction', y='constant_mRNA', hue='condition',\n",
+    "                    x='norm_induction', y='norm_reporter', hue='condition',\n",
     "                    palette=fig_perturb_palette, legend=False, linewidth=1,\n",
-    "                    ax=axes[0])\n",
-    "        axes[0].set_xlim([0,2.5])\n",
-    "        axes[0].xaxis.set_major_formatter(fold_nf_formatter(0))\n",
-    "        axes[0].set_xlabel('Fold induction')\n",
-    "        axes[0].set_ylabel('Reporter output')\n",
-    "        sns.despine(ax=axes[0])\n",
+    "                    ax=subaxes[0])\n",
+    "        subaxes[0].set_xlim([0,2.5])\n",
+    "        subaxes[0].xaxis.set_major_formatter(fold_nf_formatter(1))\n",
+    "        subaxes[0].set_xlabel('Fold induction')\n",
+    "        subaxes[0].set_ylabel('')\n",
+    "        sns.despine(ax=subaxes[0])\n",
     "\n",
     "\n",
     "        for condition, noise_yloc in zip(\n",
     "                ['fig.perturb.convergent', 'fig.perturb.divergent',\n",
     "                'fig.perturb.tandem_reporter_downstream', 'fig.perturb.tandem_reporter_upstream'],\n",
     "                [1,1,0.9,1.1]):\n",
-    "            df_plot_dist = perturb_type_df[perturb_type_df.condition == condition]\n",
+    "            df_plot_dist = perturb_type_df[(perturb_type_df.condition == condition) & (perturb_type_df.is_plasmid == is_plasmid)]\n",
     "            # Compute distribution noise\n",
     "            ext_noise = np.var((df_plot_dist.norm_inducible + df_plot_dist.norm_reporter) / 2.0)\n",
     "            int_noise = np.var((df_plot_dist.norm_inducible - df_plot_dist.norm_reporter) / 2.0)\n",
-    "            axes[2].plot(noise_yloc, int_noise / ext_noise, 'o', color=fig_perturb_palette[condition])\n",
+    "            subaxes[2].plot(noise_yloc, int_noise / ext_noise, 'o', color=fig_perturb_palette[condition])\n",
     "            sns.kdeplot(data=df_plot_dist,\n",
     "                        x='norm_inducible', y='norm_reporter', color=fig_perturb_palette[condition], alpha=0.9, linewidths=0.8,\n",
-    "                        ax=axes[1], levels=5 if is_plasmid else 8)\n",
-    "            sns.despine(ax=axes[1])\n",
-    "        axes[1].set_aspect('equal')\n",
-    "        sns.despine(ax=axes[2], bottom=True)\n",
+    "                        ax=subaxes[1], levels=5 if is_plasmid else 8)\n",
+    "            sns.despine(ax=subaxes[1])\n",
+    "        subaxes[1].set_aspect('equal')\n",
+    "        sns.despine(ax=subaxes[2], bottom=True)\n",
+    "        # Add linear/convergent titles\n",
+    "        subaxes[0].text(x=0.5, y=0.9, s='Circular' if is_plasmid else 'Linear', ha='center', fontsize=font_sizes['data_annotation'], transform=subaxes[0].transAxes)\n",
+    "        subaxes[1].text(x=0.5, y=0.9, s='Circular' if is_plasmid else 'Linear', ha='center', fontsize=font_sizes['data_annotation'], transform=subaxes[1].transAxes)\n",
     "        # Configure the noise ratio plot\n",
-    "        axes[2].xaxis.set_visible(False)\n",
-    "        axes[2].text(0.5, 0.95, 'Noise\\nratio', ha='center', ma='center', fontsize=font_sizes['data_annotation'], transform=axes[2].transAxes)\n",
-    "        axes[2].set_xlim([0.8,1.2])\n",
-    "        axes[2].set_yscale('log')\n",
-    "        axes[2].set_ylim([0.008,20])\n",
-    "        axes[2].set_yticks([0.01,0.1,1.0, 10])\n",
-    "        axes[2].set_yticklabels(['0.01','0.1', '1.0', '10.0'])\n",
+    "        subaxes[2].xaxis.set_visible(False)\n",
+    "        subaxes[2].text(0.5, 0.95, 'Noise\\nratio', ha='center', ma='center', fontsize=font_sizes['data_annotation'], transform=subaxes[2].transAxes)\n",
+    "        subaxes[2].set_xlim([0.8,1.2])\n",
+    "        subaxes[2].set_yscale('log')\n",
+    "        subaxes[2].set_ylim([0.008,20])\n",
+    "        subaxes[2].set_yticks([0.01,0.1,1.0, 10])\n",
+    "        subaxes[2].set_yticklabels(['0.01','0.1', '1.0', '10.0'])\n",
     "        #axes[1].set_xlim([0.0, 1.0])\n",
     "        #axes[1].set_ylim([0.0, 1.0])\n",
     "        #axes[1].set_xticks(np.linspace(0.0,1.0,5))\n",
     "        #axes[1].set_yticks(np.linspace(0.0,1.0,5))\n",
     "\n",
-    "        axes[1].set_xlabel('Inducible gene output')\n",
-    "        axes[1].set_ylabel('Reporter output')\n",
-    "        axes[1].xaxis.set_major_formatter(fold_nf_formatter(0))\n",
-    "        axes[1].yaxis.set_major_formatter(fold_nf_formatter(0))\n",
+    "        subaxes[1].set_xlabel('Inducible gene output')\n",
+    "        subaxes[1].set_ylabel('Reporter output')\n",
+    "        subaxes[1].xaxis.set_major_formatter(fold_nf_formatter(0))\n",
+    "        subaxes[1].yaxis.set_major_formatter(fold_nf_formatter(0))\n",
     "\n",
-    "        axes[1].set_xlabel('Inducible gene output')\n",
-    "        axes[1].set_ylabel('Reporter output')\n",
+    "        subaxes[1].set_xlabel('Inducible gene output')\n",
+    "        subaxes[1].set_ylabel('Reporter output')\n",
     "\n",
     "        o_x = noise_offset[0]\n",
     "        o_y = noise_offset[1]\n",
     "        o_s = noise_scale\n",
-    "        axes[1].annotate(text='', xytext=((o_s * 0.25) + o_x, (o_s * 0.05) + o_y), xy=((o_s * 0.1) + o_x, (o_s * 0.2) + o_y),\n",
+    "        subaxes[1].annotate(text='', xytext=((o_s * 0.25) + o_x, (o_s * 0.05) + o_y), xy=((o_s * 0.1) + o_x, (o_s * 0.2) + o_y),\n",
     "            arrowprops={'facecolor': 'black', 'edgecolor': '#000000ff', 'width': 0.8, 'headwidth': 5.0, 'headlength': 5.0, 'shrink': 0.0, 'capstyle': 'round'})\n",
-    "        axes[1].annotate(text='', xytext=((o_s * 0.25) + o_x, (o_s * 0.05) + o_y), xy=((o_s * 0.4) + o_x, (o_s * 0.2) + o_y),\n",
+    "        subaxes[1].annotate(text='', xytext=((o_s * 0.25) + o_x, (o_s * 0.05) + o_y), xy=((o_s * 0.4) + o_x, (o_s * 0.2) + o_y),\n",
     "            arrowprops={'facecolor': 'black', 'edgecolor': '#000000ff', 'width': 0.8, 'headwidth': 5.0, 'headlength': 5.0, 'shrink': 0.0, 'capstyle': 'round'})\n",
-    "        axes[1].text((o_s * 0.18) + o_x, (o_s * 0.05) + o_y, 'int.', horizontalalignment='right', transform=axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
-    "        axes[1].text((o_s * 0.32) + o_x, (o_s * 0.05) + o_y, 'ext.', horizontalalignment='left', transform=axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
-    "        subfig.text((o_s * 0.25) + o_x, (o_s * 0.20) + o_y, 'noise', horizontalalignment='center', transform=axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
+    "        subaxes[1].text((o_s * 0.18) + o_x, (o_s * 0.05) + o_y, 'int.', horizontalalignment='right', transform=axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
+    "        subaxes[1].text((o_s * 0.32) + o_x, (o_s * 0.05) + o_y, 'ext.', horizontalalignment='left', transform=axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
+    "        #subfig.text((o_s * 0.25) + o_x, (o_s * 0.20) + o_y, 'noise', horizontalalignment='center', transform=axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
     "\n",
-    "        fig_perturb_noise_axes.append(axes[2])\n",
-    "fig_perturb_subfigures['B'].text(0.5, 0.9, 'Linear boundary conditions', fontsize=font_sizes['base_size'], ha='center')\n",
-    "fig_perturb_subfigures['C'].text(0.5, 0.9, 'Circular boundary conditions', fontsize=font_sizes['base_size'], ha='center')\n",
+    "    fig_perturb_noise_axes.append(axes[2])\n",
+    "fig_perturb_subfigures['B'].text(x=0.05, y=0.5, s='Reporter output', va='center', rotation='vertical', transform=fig_perturb_subfigures['B'].transSubfigure)\n",
+    "fig_perturb_subfigures['B'].text(x=0.55, y=0.5, s='Reporter output', va='center', rotation='vertical', transform=fig_perturb_subfigures['B'].transSubfigure)\n",
+    "fig_perturb_subfigures['C'].align_ylabels()\n",
     "fig_perturb.savefig('test.svg')\n"
    ]
   },
@@ -4163,7 +4162,9 @@
     "fig_perturb_interburst_time_axes[1,1].text(900,1.0,'Reporter only', color=main_palette['reporter_only'], fontsize=font_sizes['line_annotation'])\n",
     "fig_perturb_interburst_time_axes[1,1].text(900,0.8,'Upstream Tandem', color=main_palette['tandem'], fontsize=font_sizes['line_annotation'])\n",
     "fig_perturb_interburst_time_axes[1,1].text(900,0.6,'Downstream Tandem', color=main_palette['tandem_alt'], fontsize=font_sizes['line_annotation'])\n",
-    "fig_perturb.savefig('test.svg')"
+    "fig_perturb.savefig('test.svg')\n",
+    "fig_perturb.savefig(rd.rootdir/'writeups'/'figures'/'modeling_paper'/'energy_torque_perturbations.svg', bbox_inches='tight')\n",
+    "fig_perturb.savefig(rd.rootdir/'writeups'/'figures'/'modeling_paper'/'energy_torque_perturbations.pdf', bbox_inches='tight')"
    ]
   }
  ],
