Tweaks to perturbation figure

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -3788,7 +3788,7 @@
     "# Create the overall figure, gridspec, and add subfigure labels.\n",
     "fig_perturb = plt.figure(figsize=(6.5,9.0))\n",
     "fig_perturb_gridspec = gridspec.GridSpec(5, 2, figure=fig_perturb,\n",
-    "    wspace=0.1, hspace=0.15, height_ratios=[0.7, 0.4, 1.0, 0.5, 0.5])\n",
+    "    wspace=0.1, hspace=0.15, height_ratios=[0.7, 0.6, 1.0, 0.4, 0.4])\n",
     "fig_perturb_subfigures = {\n",
     "    'A': fig_perturb.add_subfigure(fig_perturb_gridspec[0,:]),\n",
     "    'B': fig_perturb.add_subfigure(fig_perturb_gridspec[1,:]),\n",
@@ -3826,6 +3826,7 @@
    "source": [
     "fig_perturb_subfigures['A'].subplots_adjust(left=0.12, bottom=0.3, right=0.95, top=0.80)\n",
     "torque_energy_axes = fig_perturb_subfigures['A'].subplots(nrows=2, ncols=2, sharex=True, sharey=False, gridspec_kw={'hspace':0.4, 'wspace':0.4})\n",
+    "plot_alpha = 0.025\n",
     "\n",
     "# Draw axes lines\n",
     "for ax in torque_energy_axes.flatten():\n",
@@ -3921,10 +3922,10 @@
     "    (perturb_plot_all_induction_df.is_plasmid==1.0) &\n",
     "    (perturb_plot_all_induction_df.energy_perturb_type=='energy_well'), 'norm_inducible'] /= 10.0\n",
     "perturb_plot_df = perturb_plot_all_induction_df[np.abs(perturb_plot_all_induction_df.induction - 1.0/120.0) < 1e-4].copy()\n",
-    "fig_perturb_subfigures['B'].subplots_adjust(left=0.12, bottom=0.2, right=0.95, top=0.9)\n",
+    "fig_perturb_subfigures['B'].subplots_adjust(left=0.2, bottom=0.2, right=0.8, top=0.94)\n",
     "fig_perturb_output_axes = fig_perturb_subfigures['B'].subplots(nrows=2, ncols=2, sharex=True, sharey=False,\n",
     "    gridspec_kw={'hspace': 1.0, 'wspace': 0.5})\n",
-    "fig_perturb_subfigures['C'].subplots_adjust(left=0.12, bottom=0.2, right=0.95, top=0.9)\n",
+    "fig_perturb_subfigures['C'].subplots_adjust(left=0.15, bottom=0.2, right=0.9, top=0.94)\n",
     "fig_perturb_dist_axes = fig_perturb_subfigures['C'].subplots(nrows=2, ncols=4, sharex=False, sharey=False,\n",
     "    gridspec_kw={'hspace': 1.0, 'wspace': 0.5, 'width_ratios':[5, 1, 5, 1]})\n",
     "for c_label, torque_type, rnap_type, axes in zip(\n",
@@ -3982,7 +3983,7 @@
     "        subaxes[2].text(0.5, 0.95, 'Noise\\nratio', ha='center', ma='center', fontsize=font_sizes['data_annotation'], transform=subaxes[2].transAxes)\n",
     "        subaxes[2].set_xlim([0.8,1.2])\n",
     "        subaxes[2].set_yscale('log')\n",
-    "        subaxes[2].set_ylim([0.008,20])\n",
+    "        subaxes[2].set_ylim([0.005,30])\n",
     "        subaxes[2].set_yticks([0.01,0.1,1.0, 10])\n",
     "        subaxes[2].set_yticklabels(['0.01','0.1', '1.0', '10.0'])\n",
     "        #axes[1].set_xlim([0.0, 1.0])\n",
@@ -3997,17 +3998,6 @@
     "\n",
     "        subaxes[1].set_xlabel('Inducible gene output')\n",
     "        subaxes[1].set_ylabel('Reporter output')\n",
-    "\n",
-    "        o_x = noise_offset[0]\n",
-    "        o_y = noise_offset[1]\n",
-    "        o_s = noise_scale\n",
-    "        subaxes[1].annotate(text='', xytext=((o_s * 0.25) + o_x, (o_s * 0.05) + o_y), xy=((o_s * 0.1) + o_x, (o_s * 0.2) + o_y),\n",
-    "            arrowprops={'facecolor': 'black', 'edgecolor': '#000000ff', 'width': 0.8, 'headwidth': 5.0, 'headlength': 5.0, 'shrink': 0.0, 'capstyle': 'round'})\n",
-    "        subaxes[1].annotate(text='', xytext=((o_s * 0.25) + o_x, (o_s * 0.05) + o_y), xy=((o_s * 0.4) + o_x, (o_s * 0.2) + o_y),\n",
-    "            arrowprops={'facecolor': 'black', 'edgecolor': '#000000ff', 'width': 0.8, 'headwidth': 5.0, 'headlength': 5.0, 'shrink': 0.0, 'capstyle': 'round'})\n",
-    "        subaxes[1].text((o_s * 0.18) + o_x, (o_s * 0.05) + o_y, 'int.', horizontalalignment='right', transform=axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
-    "        subaxes[1].text((o_s * 0.32) + o_x, (o_s * 0.05) + o_y, 'ext.', horizontalalignment='left', transform=axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
-    "        #subfig.text((o_s * 0.25) + o_x, (o_s * 0.20) + o_y, 'noise', horizontalalignment='center', transform=axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
     "\n",
     "    fig_perturb_noise_axes.append(axes[2])\n",
     "fig_perturb_subfigures['B'].text(x=0.05, y=0.5, s='Reporter output', va='center', rotation='vertical', transform=fig_perturb_subfigures['B'].transSubfigure)\n",
@@ -4024,9 +4014,9 @@
    "source": [
     "# Plot overall burst duration as a function of induction and condition\n",
     "conditions = [f'fig.perturb.sc_bursts.{x}' for x in ['tandem_reporter_upstream', 'tandem_reporter_downstream', 'convergent', 'divergent']]\n",
-    "fig_perturb_subfigures['D'].subplots_adjust(left=0.12, bottom=0.3, right=0.95, top=0.8)\n",
+    "fig_perturb_subfigures['D'].subplots_adjust(left=0.12, bottom=0.27, right=0.95, top=0.95)\n",
     "fig_perturb_burst_size_axes = fig_perturb_subfigures['D'].subplots(nrows=2, ncols=2, sharey=False, gridspec_kw={'wspace': 0.5})\n",
-    "fig_perturb_subfigures['E'].subplots_adjust(left=0.12, bottom=0.3, right=0.95, top=0.8)\n",
+    "fig_perturb_subfigures['E'].subplots_adjust(left=0.12, bottom=0.27, right=0.95, top=0.95)\n",
     "fig_perturb_interburst_time_axes = fig_perturb_subfigures['E'].subplots(nrows=2, ncols=2, sharey=False, gridspec_kw={'wspace': 0.5})\n",
     "\n",
     "for scenario_label, torque_type, rnap_type, axes in zip(\n",
